# mcxa-ergot-demo

./: Cargo.toml
.cargo/: config.toml
led-service/: Cargo.toml
led-service/src/: lib.rs
pwm-service/: Cargo.toml
pwm-service/src/: lib.rs
shared-icd/: Cargo.toml
shared-icd/src/: lib.rs
src/: main.rs
temperature-service/: Cargo.toml
temperature-service/src/: lib.rs
