[package]
name = "mcxa-ergot-demo"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bbq2                 = { version = "0.4.3", default-features = false, features = ["critical-section", "maitake-sync-0_2"] }
cortex-m             = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt          = { version = "0.7", features = ["set-sp", "set-vtor"] }
crc                  = "3.4.0"
critical-section     = "1.2.0"
defmt                = "1.0"
defmt-rtt            = "1.0"
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor     = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-interrupt", "executor-thread"] }
embassy-mcxa         = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac"] }
embassy-sync         = { git = "https://github.com/embassy-rs/embassy" }
embassy-time         = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-time-driver  = { git = "https://github.com/embassy-rs/embassy", optional = true }
embedded-hal         = "1.0.0"
embedded-hal-async   = "1.0.0"
embedded-io-async    = "0.7.0"
ergot                = "0.12.0"
heapless             = "0.9.2"
led-service          = { path = "led-service" }
mutex                = { version = "1.0.2", features = ["impl-unsafe-cortex-m-single-core"] }
panic-probe          = { version = "1.0", features = ["print-defmt"] }
pwm-service          = { path = "pwm-service" }
rand_core            = "0.9"
shared-icd           = { path = "shared-icd" }
static_cell          = "2.1.1"
temperature-service  = { path = "temperature-service" }
tmp108               = { version = "0.4.0", features = ["async", "embedded-sensors-hal-async"] }

[profile.release]
lto = true # better optimizations
debug = 2  # enough information for defmt/rtt locations
