[package]
name = "temperature-service"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt                = "1.0"
defmt-rtt            = "1.0"
embedded-hal         = "1.0.0"
embedded-hal-async   = "1.0.0"
ergot                = "0.12.0"
pwm-service          = { path = "../pwm-service" }
shared-icd           = { path = "../shared-icd" }
static_cell          = "2.1.1"
tmp108               = { version = "0.4.0", features = ["async"] }

[profile.release]
lto = true # better optimizations
debug = 2  # enough information for defmt/rtt locations
